Text Color Contrast Correction

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
     height: 100vh;
     background-color: #050505;
-    color: #00AD00;
+    color: #7499c6;
     font-family: "Terminal", sans-serif;
     font-size: 20px;
     text-align: center; }
